--- a/app/views/ratings/index.haml
+++ b/app/views/ratings/index.haml
@@ -5,7 +5,7 @@
   %aside.rating-dashboard
     = link_to t('pages.ratings.clear'), '#', class: 'clear-selection get-gradient2'
     - month = Month.where(month: Rating.last_month).last
-    - link = month.ratings
+    - link = month.try(:ratings)
     = link_to t('pages.ratings.download'), link.url unless link.blank?
     %table.region
       %tr
